i add some modification

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     header h1, header p, .btn {
       position: relative;
       z-index: 1;
+      margin-right: 3rem;
     }
 
     header h1 {
@@ -199,34 +200,37 @@
   </nav>
 
   <!-- ====== HEADER ====== -->
-  <header>
- <section id="home" style="
-  display:flex;
-  align-items:center;
-  justify-content:space-around;
-  flex-wrap:wrap;
-  padding:60px 20px;
-  background-color:#EED6A8;
-">
-  <div style="max-width:400px; text-align:right;">
-    <h1 style="color:#C97B30;">معجون السفرجل الطبيعي 🍯</h1>
-    <p style="font-size:1.2rem; color:#333;">
-      استمتع بالطعم الأصيل لمعجون السفرجل المصنوع من فواكه طازجة 100%.
-      منتج طبيعي، لذيذ، وصحي بدون مواد حافظة.
-    </p>
-    <button class="btn" onclick="window.location.href='https://wa.me/213560073327'">أطلب عبر واتساب</button>
-  </div>
+  <!-- ====== HEADER ====== -->
+<header>
+  <section id="home" style="
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 60px 20px;
+    background-color: #EED6A8;
+  ">
+    <div style="max-width: 400px; text-align: right; flex: 1 1 300px;">
+      <h1 style="color: #C97B30;">معجون السفرجل الطبيعي 🍯</h1>
+      <p style="font-size: 1.2rem; color: #333;">
+        استمتع بالطعم الأصيل لمعجون السفرجل المصنوع من فواكه طازجة 100%.
+        منتج طبيعي، لذيذ، وصحي بدون مواد حافظة.
+      </p>
+      <button class="btn" onclick="window.location.href='https://wa.me/213560073327'">أطلب عبر واتساب</button>
+    </div>
 
-  <div>
-    <img src="photo/photo_2025-10-27_13-46-49.jpg" alt="معجون السفرجل" style="
-      width:350px;
-      border-radius:15px;
-      box-shadow:0 4px 10px rgba(0,0,0,0.2);
-    ">
-  </div>
-</section>
+    <div style="flex: 1 1 300px; display: flex; justify-content: center; margin-top: 20px;">
+      <img src="photo/photo_2025-10-27_13-46-49.jpg" alt="معجون السفرجل" style="
+        width: 100%;
+        max-width: 350px;
+        height: auto;
+        border-radius: 15px;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      ">
+    </div>
+  </section>
+</header>
 
-  </header>
 
   <!-- ====== HOME ====== -->
   <section id="home">
